contact us button padding (services) fixed. carousel arrow z-index fixed

--- a/template-1/carousel/files/scss/carousel.scss
+++ b/template-1/carousel/files/scss/carousel.scss
@@ -132,7 +132,7 @@
         top: 50%;
         left: 15px;
         color: #fff;
-        z-index: 1000000;
+        z-index: 10;
 
         @media (max-width: 767px) {
             left: 5px;
@@ -144,7 +144,7 @@
         top: 50%;
         right: 15px;
         color: #fff;
-        z-index: 1000000;
+        z-index: 10;
 
         @media (max-width: 767px) {
             right: 5px;
