--- a/template-1/solutions/files/scss/subsection_content.scss
+++ b/template-1/solutions/files/scss/subsection_content.scss
@@ -139,7 +139,7 @@
             padding: 72px 73px 65px 45px;
             background-size: cover;
             width: 95%;
-            height: 400px;
+            height: auto;
             background-size: cover;
 
             @media (max-width: 767px) {
@@ -185,6 +185,10 @@
                 background: #d5b157;
                 padding: 12px 30px;
                 text-transform: uppercase;
+
+                @media (max-width: 1075px) {
+                    padding: 12px 20px;
+                }
             }
         }
     }
